--- a/src/app.postcss
+++ b/src/app.postcss
@@ -1,9 +1,9 @@
 html,
 body {
-	@apply h-full overflow-hidden bg-surface-900 text-black dark:text-white;
+	@apply h-full overflow-hidden dark:bg-surface-900 bg-surface-100 text-black dark:text-white;
 }
 
 input[type='text'],
 input[type='password'] {
-	@apply bg-surface-700 text-white px-3 py-1 border-opacity-20;
+	@apply dark:bg-surface-700 bg-surface-100 text-white px-3 py-1 border-opacity-20;
 }
